--- a/requirements.txt
+++ b/requirements.txt
@@ -61,6 +61,7 @@ Pygments==2.18.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
+pywin32==306
 PyYAML==6.0.1
 querystring-parser==1.2.4
 referencing==0.35.1
@@ -77,6 +78,8 @@ SQLAlchemy==2.0.30
 sqlparse==0.5.0
 streamlit==1.35.0
 tenacity==8.3.0
+tensorflow==2.10.1
+tensorflow-text==2.10.0
 threadpoolctl==3.5.0
 toml==0.10.2
 toolz==0.12.1
