--- a/.github/workflows/master_pret-a-depenser.yml
+++ b/.github/workflows/master_pret-a-depenser.yml
@@ -31,7 +31,16 @@ jobs:
         run: pip install -r requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+      - name: Run API tests
+        run: |
+          source venv/bin/activate
+          python -m unittest discover -s tests -p "test_api.py"
 
+      - name: Run Dashboard tests
+        run: |
+          source venv/bin/activate
+          python -m unittest discover -s tests -p "test_dashboard.py"
+            
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
