--- a/.github/workflows/master_pret-a-depenser.yml
+++ b/.github/workflows/master_pret-a-depenser.yml
@@ -33,11 +33,11 @@ jobs:
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       - name: Run API tests
         run: |
-          python -m unittest discover -s tests -p "test_api.py"
+          venv/bin/python -m unittest discover -s tests -p "test_api.py"
 
       - name: Run Dashboard tests
         run: |
-          python -m unittest discover -s tests -p "test_dashboard.py"
+          venv/bin/python -m unittest discover -s tests -p "test_dashboard.py"
             
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
