--- a/.github/workflows/master_pret-a-depenser.yml
+++ b/.github/workflows/master_pret-a-depenser.yml
@@ -30,14 +30,13 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
         
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       - name: Run API tests
         run: |
-          venv/bin/python -m unittest discover -s tests -p "test_api.py"
+          python -m unittest discover -s tests -p "test_api.py"
 
       - name: Run Dashboard tests
         run: |
-          venv/bin/python -m unittest discover -s tests -p "test_dashboard.py"
+          python -m unittest discover -s tests -p "test_dashboard.py"
             
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
