--- a/.github/workflows/azure-functions-app-python.yml
+++ b/.github/workflows/azure-functions-app-python.yml
@@ -29,11 +29,17 @@ jobs:
       
       - name: Install dependencies
         run: pip install -r requirements.txt
+
+      - name: Run API tests
+        run: pytest test_api.py
+
+      - name: Run Dashboard tests
+        run: pytest test_dashboard.py
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip release.zip ./* dashboard.py
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v3
