--- a/.github/workflows/azure-functions-app-python.yml
+++ b/.github/workflows/azure-functions-app-python.yml
@@ -39,7 +39,7 @@ jobs:
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* dashboard.py
+        run: zip -r release.zip ./* 
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v3
