--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ opentelemetry-api==1.24.0
 opentelemetry-sdk==1.24.0
 pandas==2.0.3
 pillow==10.3.0
+plotly==5.11.0
 pyarrow==15.0.2
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
