--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ imblearn==0.0
 importlib-metadata==7.0.0
 importlib_resources==6.4.0
 iniconfig==2.0.0
+IPython==8.13.0
 itsdangerous==2.2.0
 joLib==0.0.1
 jsonschema==4.22.0
